--- a/package.json
+++ b/package.json
@@ -18,11 +18,12 @@
     "analyze:bundle": "node scripts/analyze-bundle.js"
   },
   "dependencies": {
+    "axios": "^1.6.0",
+    "lucide-react": "^0.554.0",
     "next": "^14.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "zustand": "^4.4.0",
-    "axios": "^1.6.0"
+    "zustand": "^4.4.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.1.4",
@@ -38,9 +39,9 @@
     "eslint": "^8.0.0",
     "eslint-config-next": "^14.0.0",
     "eslint-config-prettier": "^9.0.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "^2.29.0",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-import-resolver-typescript": "^3.6.1",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8.4.31",
@@ -49,4 +50,3 @@
     "typescript": "^5.2.2"
   }
 }
-
