--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
     "analyze": "ANALYZE=true next build",
-    "analyze:bundle": "node scripts/analyze-bundle.js"
+    "analyze:bundle": "node scripts/analyze-bundle.js",
+    "convert:webp": "node scripts/convert-to-webp.js"
   },
   "dependencies": {
     "axios": "^1.6.0",
@@ -46,6 +47,7 @@
     "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8.4.31",
     "prettier": "^3.1.0",
+    "sharp": "^0.34.5",
     "tailwindcss": "^3.3.5",
     "typescript": "^5.2.2"
   }
