--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,10 @@
 {
   "framework": "nextjs",
-  "regions": ["sin1"]
+  "regions": ["sin1"],
+  "functions": {
+    "app/**": {
+      "maxDuration": 10
+    }
+  }
 }
 
