--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "axios": "^1.6.0",
+    "firebase": "^12.6.0",
     "lucide-react": "^0.554.0",
     "next": "^14.0.0",
     "react": "^18.2.0",
